--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "friendly slack bot",
   "scripts": {
     "clean": "rm -rfv ./lib/",
-    "build": "npm run clean && babel src --out-dir lib --source-maps",
-    "watch": "npm run clean && babel src --out-dir lib --source-maps --watch",
+    "build": "babel src --out-dir lib --source-maps",
+    "watch": "babel src --out-dir lib --source-maps --watch",
     "start": "npm run build && node ./lib/app.js",
-
-    "compile": "npm run clean && babel src --out-dir lib --ignore src/app.js",
+    "test": "npm run build && mocha --compilers js:babel-core/register",
+    "test-watch": "npm run build && mocha --compilers js:babel-core/register --recursive --watch",
+    "compile": "babel src --out-dir lib --ignore src/app.js",
     "prepublish": "npm run compile"
   },
   "main": "./lib/index",
-  "files": ["lib/"],
+  "files": [
+    "lib/"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/blaenk/bmo.git"
@@ -30,11 +33,10 @@
   "devDependencies": {
     "babel": "^6.3.26",
     "babel-cli": "^6.3.17",
+    "babel-core": "^6.3.26",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "source-map-support": "^0.4.0"
-  },
-  "peerDependencies": {
-    "babel-polyfill": "^6.3.14"
   },
   "dependencies": {
     "bluebird": "^3.1.1",
