--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-core": "^6.3.26",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
+    "chai": "^3.4.1",
     "source-map-support": "^0.4.0"
   },
   "dependencies": {
