--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
+    "chai-as-promised": "^5.2.0",
     "mocha": "^2.3.4",
     "source-map-support": "^0.4.0"
   },
